<resources>
    <string name="app_name">To-Do-ListApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kullanici_adi">Kullanıcı adını giriniz.</string>
    <string name="welcome">Hoşgeldiniz</string>
    <string name="Kullanici_bilgisi">Kullanıcı Bilgisi</string>
    <string name="cikis_yap">Çıkış Yap!</string>
    <string name="password">Parolanızı Giriniz.</string>
    <string name="logIn">Giriş Yap</string>
    <string name="registrary">Kayıt Ol</string>
    <string name="createUser">Giriş Bilgilerinizi Oluşturun.</string>
    <string name="createUserName">Kullanıcı Adınızı Oluşturun.</string>
    <string name="createPassword">Parolanızı Oluşturun.</string>
    <string name="save">Kaydet</string>
    <string name="title_activity_auth">AuthActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="todolist_text">Create Task</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>